--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
+* {
+    margin: auto;
+    padding: 0;
+    box-sizing: border-box;
+    align-items: center;
+}
 .form {
     margin: auto;
     display: flex;
@@ -6,13 +12,44 @@
 }
 
 #search-button {
-    outline-color: black;
-   
-}
-#searchBtn {
-    border-color: black;
+    justify-content: center;
     align-items: center;
+    border-color: black;
     margin: auto;
-    padding-top: 10%;
+    padding-top: 20%;
+    cursor: pointer;
+}
+
+.weather-container {
+    display: flex;
+    justify-content: space-around;
+    flex-direction: row;
+    width: 60%;
+    height:  350px;
+    padding-top: 2%;
+    margin: 5% auto;
+    border-radius: 6%;
+    background-image: linear-gradient(rgb(154, 179, 212),rgb(20, 65, 83));
+}
+
+.weather-today {
+    color: white;
+    padding-left: 10%;
+}
+
+.area {
+    padding-left: 10%;
+    
 
 }
+
+.details{
+    padding-left: 15%;
+    color: white;
+}
+ .weather-icon {
+    max-width: 40%;
+    max-height: 40%;
+    border-radius: 20%;
+
+ }
