--- a/style.css
+++ b/style.css
@@ -4,11 +4,12 @@
     box-sizing: border-box;
     align-items: center;
 }
-.form {
+.search-section {
     margin: auto;
     display: flex;
     align-items: center;
-    padding-top: 2%;
+    padding-top: 5%;
+    padding-left: 40%;
 }
 
 #search-button {
@@ -51,5 +52,25 @@
     max-width: 40%;
     max-height: 40%;
     border-radius: 20%;
+ }
 
+ .forecast {
+    display: flex;
+    align-items: flex-end;
+    color: white;
+    width: 60%;
+    height: 250px;
+    padding-top: 2%;
+    margin: 5% auto;
+    border-radius: 6%;
+    background-image: linear-gradient(rgb(154, 179, 212),rgb(20, 65, 83));
+ }
+ .day-forecast {
+    display: flex;
+    align-self: center;
+ }
+ .forecast-containers {
+    border-radius: 15px;
+    border: lightcoral;
+    align-items: flex-end;
  }
